[package]
name = "safa-abi"
version = "0.5.4"
edition = "2024"
description = "an ABI over some of the SafaOS's kernel structures"
repository = "https://github.com/SafaOS/SafaOS"
categories = ["os"]
keywords = ["kernel", "libos", "ffi"]
license = "MIT"

[dependencies]
core = { version = "1.0.0", optional = true, package = "rustc-std-workspace-core" }
alloc = { version = "1.0.0", optional = true, package = "rustc-std-workspace-alloc" }
compiler_builtins = { version = "0.1", optional = true }

[features]
default = []
std = []
rustc-dep-of-std = ["core", "alloc", "compiler_builtins/rustc-dep-of-std"]

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(target_os, values("safaos"))']

[package.metadata.docs.rs]
default-target = "x86_64-unknown-none"
targets = []
